Actually fixed contrast, removed unneeded files

--- a/css/style.css
+++ b/css/style.css
@@ -109,7 +109,7 @@ nav a:hover {
   font-size: 150%;
 }
 
-#bar div p {
+#contrast {
   color: #ffffff;
 }
 
